fix for test widgets so it doesnt get cut off from preview on live page

--- a/app/app.less
+++ b/app/app.less
@@ -194,15 +194,11 @@ h4 {
 
 .slide-open__menu {
   position: absolute;
-  background: @day-secondary;
-  left: -100px;
-  right: -100px;
-  width: 170px;
-  margin: 0 auto;
-  bottom: 33px;
-  padding: 12px;
+  background: @day-primary;
+  right: calc(~'100% + 20px');
+  bottom: -10px;
+  padding: 0px 12px;
   display: flex;
-  flex-direction: column;
   z-index: 10;
   .radius;
   .border;
@@ -343,7 +339,7 @@ th {
 
 .slide-fade-enter,
 .slide-fade-leave-to {
-  transform: translateY(20px);
+  transform: translateX(20px);
   opacity: 0;
 }
 
